# Yhtua

./: .oxlintrc.json  README.md  biome.json  lefthook.yml  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: main.yml  pages.yml
app/: app.vue
app/assets/css/: main.css
app/components/: DangerModal.vue  Loading.vue  Navbar.vue  Notification.vue  SettingList.vue  TokenLength.vue  TokenList.vue
app/composables/: useAvatarColor.ts  useCrypto.ts  useMerge.ts  useMigration.ts  useModal.ts  useNotification.ts  useOTP.ts  useSettings.ts  useSleep.ts  useStore.ts  useSync.ts  useformat.ts
app/middleware/: onboarding.ts
app/pages/: index.vue  settings.vue  sync.vue
app/pages/token/: create.vue
app/pages/tokens/: [id].vue
components/: TokenLength.vue  TokenList.vue
composables/: useNotification.ts  useStore.ts  useformat.ts
docs/: mobile-strategy.md
landing/: astro.config.mjs  package.json
landing/.astro/: content.d.ts  data-store.json  settings.json
landing/src/layouts/: Layout.astro
landing/src/pages/: index.astro
landing/src/styles/: global.css
middleware/: onboarding.ts
pages/: settings.vue
pages/token/: create.vue
pages/tokens/: [id].vue
scripts/: bump-version.sh  patch-appimage.sh
src-tauri/: AppRun  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs
src/components/: DangerModal.vue  Loading.vue  Navbar.vue  Notification.vue  SettingList.vue  TokenLength.vue  TokenList.vue
src/composables/: useNotification.ts  useOTP.ts  useSettings.ts  useSleep.ts  useStore.ts
src/middleware/: onboarding.ts
src/pages/: add-new-token.vue  index.vue  list.vue  settings.vue  token.vue
(+6 files in other folders)
