[package]
name = "yhtua"
version = "2.4.0"
description = "Yhtua - Open Source 2FA Token Manager"
authors = ["Yoann Gendrey"]
license = "MIT"
repository = "https://github.com/iiAku/Yhtua"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2.8"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4"

# Crypto dependencies
ring = "0.17"
base64 = "0.22"
rand = "0.8"
thiserror = "2"
dirs = "6"
whoami = "1.5"
tauri-plugin-clipboard-manager = "2.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
keyring = "3"
